# friends

./: .gitignore  CMakeLists.txt  LICENSE  README.md  friends-config.h.in  friends_argument.c  friends_argument.h  friends_atom.c  friends_atom.h  friends_config.h.in  friends_core.c  friends_core.h  friends_data.c  friends_data.h  friends_defs.h  friends_error.c  friends_error.h  friends_etcetra.c  friends_etcetra.h  friends_global.c  friends_grammer.lem  friends_io.c  friends_io.h  friends_lexer.h  friends_lexer.re  friends_list.c  friends_list.h  friends_match.c  friends_match.h  friends_park.c  friends_park.h  friends_parser.c  friends_parser.h  friends_parser.lem  friends_parser_implement.c  friends_parser_implement.h  friends_pathname.h  friends_pathname.re  friends_printf.re  friends_proposition.c  (+12 more)
cmake/: FindLEMON.cmake  FindRE2C.cmake
enc/: CMakeLists.txt  mktble.htpl  mktble.re  mktble.tpl  mktbler.tpl  ucm2re.htpl  ucm2re.tpl  utf8.h  utf8.re  utf8r.re
fe/: CMakeLists.txt  main.c
lib/: CMakeLists.txt  friends.h  friends_atom.c  friends_atom.h  friends_config.h.in  friends_core.h  friends_data.c  friends_data.h  friends_data_private.h  friends_defs.h  friends_error.c  friends_error.h  friends_global.c  friends_global.h  friends_grammer.lem  friends_io.c  friends_io.h  friends_lexer.h  friends_lexer.re  friends_list.h  friends_match.c  friends_memory.c  friends_memory.h  friends_park.c  friends_park.h  friends_parser.c  friends_parser.h  friends_parser_implement.c  friends_parser_implement.h  friends_pathname.h  friends_printf.re  friends_proposition.c  friends_proposition.h  friends_rbtree.h  friends_set.c  friends_set.h  friends_string.h  friends_string.re  friends_struct_data.h  friends_token.c  (+3 more)
lib/enc/: README.md  ucm2re.re  ucm2re.tpl  ucm2rer.tpl  utf8.h  utf8r.re
tests/: CMakeLists.txt  encoding.c  friends_test.c  friends_test.h  lexer.c  list.c  rbtree.c  set.c  string.c  test.c.in  test.friends  test_common.h
utils/: mkliteral
